Natya Ramam School of Dance_files/main.css
/* ... */
/* Basic */

    body {
        background: #ffffff;
        /*font-family: 'Source Sans Pro', sans-serif;*/
        font-family: 'Cambria', sans-serif;
        font-size: 19pt;
        font-weight: 300;
        line-height: 1.75em;
        color: #888;
    }

        body.is-loading * {
            -moz-transition: none !important;
            -webkit-transition: none !important;
            -ms-transition: none !important;
            transition: none !important;
            -moz-animation: none !important;
            -webkit-animation: none !important;
            -ms-animation: none !important;
            animation: none !important;
        }

    input, textarea, select {
        font-family: 'Source Sans Pro', sans-serif;
        font-size: 19pt;
        font-weight: 300;
        line-height: 1.75em;
        color: #888;
    }

    h1, h2, h3, h4, h5, h6 {
        font-weight: 300;
        color: #666;
        line-height: 1.5em;
    }

    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
        color: inherit;
        text-decoration: none;
    }

        h1 a strong, h2 a strong, h3 a strong, h4 a strong, h5 a strong, h6 a strong {
            color: #333;
        }

    h2 {
        font-family: Tangerine;
        text-decoration: underline;
        font-weight: 700;
        font-size: 2em;
        letter-spacing: -1px;
    }

        h2.alt {
            color: #888;
        }

            h2.alt strong {
                color: #666;
            }

    h3 {
        font-size: 1.5em;
    }

    header {
        margin: 0 0 1em 0;
    }

        header > p {
            margin: 1em 0 0 0;
        }

    footer {
        margin: 2em 0 0 0;
    }

    strong, b {
        font-weight: 600;
        /*color: #666;*/
        color: inherit;
    }

    em, i {
        font-style: italic;
    }

    a {
        text-decoration: none;
        color: inherit;
        border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
        -moz-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
        -webkit-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
        -ms-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
        transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
        outline: 0;
    }

        a:hover {
            color: #E27689;
            border-bottom-color: rgba(255, 255, 255, 0);
        }

    sub {
        position: relative;
        top: 0.5em;
        font-size: 0.8em;
    }

    sup {
        position: relative;
        top: -0.5em;
        font-size: 0.8em;
    }

    hr {
        border: 0;
        border-top: solid 1px #ddd;
    }

    blockquote {
        border-left: solid 0.5em #ddd;
        padding: 1em 0 1em 2em;
        font-style: italic;
    }

    p, ul, ol, dl, table {
        margin-bottom: 2em;
    }

    br.clear {
        clear: both;
    }

/* Sections/Article */

    section, article {
        margin-bottom: 3em;
    }

        section > :last-child,
        section > .container, section:last-child, article > :last-child,
        article > .container, article:last-child {
            margin-bottom: 0;
        }

        .row > section, .row > article {
            margin-bottom: 0;
        }

/* Image */

    .image {
        display: inline-block;
        border: 0;
    }

        .image img {
            display: block;
            width: 100%;
        }

        .image.avatar48 {
            width: 160px;
            height: 160px;
            background: transparent; /* remove debug color */
            border-radius: 50%;
            overflow: hidden;
            display: inline-block;
        }

            .image.avatar48 img {
                width: 160px;
                height: 160px;
                object-fit: cover;
                display: block;
            }

        .image.fit {
            display: block;
            width: 100%;
        }

        .image.featured {
            display: block;
            width: 100%;
            margin: 0 0 2em 0;
        }

        .image.left {
            float: left;
            margin: 0 2em 2em 0;
        }

        .image.centered {
            display: block;
            margin: 0 0 2em 0;
        }

            .image.centered img {
                margin: 0 auto;
                width: auto;
            }

/* List */

    ul.default {
        list-style: disc;
        padding-left: 1em;
    }

        ul.default li {
            padding-left: 0.5em;
        }

    ul.icons {
        cursor: default;
    }

        ul.icons li {
            display: inline-block;
        }

        ul.icons a {
            display: inline-block;
            width: 2em;
            height: 2em;
            line-height: 2em;
            text-align: center;
            border: 0;
        }

    ol.default {
        list-style: decimal;
        padding-left: 1.25em;
    }

        ol.default li {
            padding-left: 0.25em;
        }

/* Form */

    form label {
        display: block;
        text-align: left;
        margin-bottom: 0.5em;
    }

    form input[type="text"],
    form input[type="email"],
    form input[type="password"],
    form select,
    form textarea {
        position: relative;
        appearance: none;
        -webkit-appearance: none;
        display: block;
        border: 0;
        outline: 0;
        background: #fff;
        background: rgba(255, 255, 255, 0.75);
        width: 100%;
        border-radius: 0.35em;
        padding: 0.75em 1em 0.75em 1em;
        box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
        border: solid 1px rgba(0, 0, 0, 0.15);
        -moz-transition: all 0.35s ease-in-out;
        -webkit-transition: all 0.35s ease-in-out;
        -ms-transition: all 0.35s ease-in-out;
        transition: all 0.35s ease-in-out;
    }
/* ... */

